# museflow

./: .claudeignore  .dockerignore  .env.DIST  .env.example  .envrc  .gitignore  .pre-commit-config.yaml  .repomixignore  CLAUDE.md  CONVENTIONS.md  Dockerfile  Justfile  Makefile  README.md  ROADMAP.txt  docker-compose.yml  plan_v2.md  pyproject.toml  repomix.config.json  taste_profile_complete_plan.md  taste_profile_master_plan.md  taste_profile_step_1_plan.md  taste_profile_step_2_plan.md  taste_profile_step_3_plan.md  taste_profile_step_4_plan.md  taste_profile_step_5_plan.md  taste_profile_step_6_plan.md
.claude/agents/: arch.md  engineer.md  python.md  security.md  test.md
.claude/commands/: add-tests.md  arch-review.md  new-feature.md  new-migration.md  new-provider.md  security-review.md
.continue/agents/: new-config.yaml
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot-auto-merge.yml
migrations/: env.py
migrations/versions/: 04157855f63c_.py  07acf9e627f5_.py  10cfb105a1b5_.py  19fd9c4de218_.py  2d4407f894f8_.py  2fc0a194d8fe_.py  41f40a325fb7_.py  7e443ad8cff3_.py  872c6c7e6317_.py  9b74ed7a43c8_.py  a7739930c6b4_.py  a7ebe32acd5d_.py  a91b59b1ae2f_.py  a9f5ecb0a7b5_.py  acb90b94912e_.py  b74d2db001d0_.py  b8479b9dde8b_.py  cab9b8fa8b35_.py  cf11a07693bf_.py  d8bdbf027318_.py  e424c7c75871_.py  e6957ebbe4e2_.py  ea9784e8d2a1_.py  ec727be9792c_.py  eccf2c7afc7b_.py  initial.py
museflow/: __init__.py
museflow/application/inputs/: auth.py  base.py  discovery.py  enrich.py  enricher.py  history.py  playlist.py  rate.py  sync.py  taste.py  user.py
museflow/application/mappers/: auth.py
museflow/application/ports/advisors/: agent.py  client.py  similar.py  taste.py
museflow/application/ports/enrichers/: track.py
museflow/application/ports/profilers/: taste.py
museflow/application/ports/providers/: client.py  history.py  library.py  oauth.py
museflow/application/ports/repositories/: auth.py  blacklist.py  discovery.py  music.py  playlist.py  taste.py  track.py  users.py
museflow/application/use_cases/: add_to_blacklist.py  advisor_discover.py  advisor_discovery_tracks.py  blacklist_list.py  blacklist_remove.py  build_taste_profile.py  discover_similar.py  discover_taste.py  discovery_playlist_list.py  discovery_playlist_rate.py  discovery_playlist_view.py  history_import.py  import_streaming_history.py  list_blacklist.py  playlist_delete.py  playlist_history.py  playlist_list.py  playlist_view.py  provider_oauth_callback.py  provider_oauth_redirect.py  provider_sync_library.py  rate.py  taste_discover.py  taste_profile_build.py  taste_profile_list.py  tracks_enrich.py  user_authenticate.py  user_create.py  user_update.py
museflow/application/utils/: discovery.py
museflow/domain/: const.py  enums.py  exceptions.py  types.py
museflow/domain/entities/: auth.py  base.py  blacklist.py  discovery.py  music.py  playlist.py  taste.py  track.py  user.py  users.py
museflow/domain/mappers/: auth.py
museflow/domain/ports/: security.py
museflow/domain/ports/advisors/: client.py
museflow/domain/ports/providers/: client.py  library.py
museflow/domain/ports/repositories/: auth.py  music.py  users.py
museflow/domain/schemas/: auth.py  base.py  user.py
museflow/domain/services/: reconciler.py
museflow/domain/utils/: genre.py  taste.py  text.py
museflow/domain/value_objects/: auth.py  base.py  blacklist.py  music.py  taste.py  track.py
museflow/infrastructure/adapters/: http.py  security.py
museflow/infrastructure/adapters/advisors/: http.py
museflow/infrastructure/adapters/database/: session.py
museflow/infrastructure/adapters/providers/: http.py
museflow/infrastructure/config/: loggers.py
museflow/infrastructure/config/settings/: app.py  database.py  gemini.py  lastfm.py  spotify.py
museflow/infrastructure/entrypoints/api/: dependencies.py  main.py
museflow/infrastructure/entrypoints/cli/: dependencies.py  main.py  parsers.py  types.py
spotifagent/: __init__.py
spotifagent/application/services/: spotify.py
spotifagent/application/use_cases/: oauth_callback.py  oauth_redirect.py  provider_oauth_callback.py  provider_oauth_redirect.py  provider_sync_library.py  provider_sync_music.py  spotify_oauth_callback.py  spotify_oauth_redirect.py  spotify_sync.py  spotify_sync_top_items.py  user_authenticate.py  user_create.py  user_update.py
spotifagent/domain/: exceptions.py
spotifagent/domain/entities/: auth.py  music.py  spotify.py  users.py
spotifagent/domain/ports/clients/: spotify.py
spotifagent/domain/ports/providers/: client.py  library.py
spotifagent/domain/ports/repositories/: auth.py  music.py  spotify.py  users.py
spotifagent/infrastructure/: types.py
spotifagent/infrastructure/adapters/: security.py
spotifagent/infrastructure/adapters/clients/: spotify.py
spotifagent/infrastructure/adapters/database/: session.py
spotifagent/infrastructure/config/: loggers.py
spotifagent/infrastructure/config/settings/: app.py  database.py  spotify.py
spotifagent/infrastructure/entrypoints/api/: dependencies.py  main.py  schemas.py
spotifagent/infrastructure/entrypoints/cli/: dependencies.py  main.py  parsers.py
tests/: CLAUDE.md  __init__.py  conftest.py
tests/assets/history/: Streaming_History_Audio_2023-2024_11.json
tests/assets/httpmock/spotify/: playlist_items.json  top_artists.json  top_tracks.json
tests/integration/: conftest.py
tests/integration/application/services/: test_spotify.py
tests/integration/application/use_cases/: test_add_to_blacklist.py  test_advisor_discover.py  test_blacklist_add.py  test_blacklist_list.py  test_blacklist_remove.py  test_build_taste_profile.py  test_discover_similar.py  test_discover_taste.py  test_history_import.py  test_import_streaming_history.py  test_list_blacklist.py  (+23 more)
tests/integration/factories/: auth.py  base.py  music.py  spotify.py  users.py
tests/integration/utils/: wiremock.py
tests/unit/: conftest.py
tests/unit/domain/: test_enums.py  test_types.py
tests/unit/factories/: auth.py  music.py  spotify.py  users.py
(+424 files in other folders)
