[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "museflow"
version = "0.1.0"
description = "MuseFlow helps you discover new music by offering recommendations based on your listening history."
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [
  { name = "Yannick Chabbert", email = "yannick.chabbert.it@gmail.com" }
]

dependencies = [
    "fastapi[standard]>=0.135.3",
    "starlette>=1.0.0",
    "pydantic[email]>=2.13.0",
    "pydantic-core>=2.46.0",
    "pydantic-settings>=2.13.1",
    "sqlalchemy[asyncio]>=2.0.49",
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "typer>=0.24.1",
    "rich>=15.0.0",
    "httpx>=0.28.1",
    "argon2-cffi>=25.1.0",
    "pyjwt>=2.12.1",
    "tenacity>=9.1.4",
    "rapidfuzz>=3.14.5",
    "unidecode>=1.4.0",
    "ijson>=3.5.0",
]

[project.scripts]
museflow = "museflow.infrastructure.entrypoints.cli.main:app"

[dependency-groups]
test = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pytest-env>=1.6.0",
    "pytest-httpx>=0.36.2",
    "pytest-reverse>=1.9.0",
    "pytest-xdist[psutil]>=3.8.0",
    "coverage[toml]>=7.13.5",
    "polyfactory>=3.3.0",
    "time-machine>=3.2.0",
    "wiremock>=2.7.0",
]

dev = [
    "pre-commit>=4.5.1",
    "deptry>=0.25.1",
    "ruff>=0.15.10",
    "mypy>=1.20.1",
    # Note: pydantic[dotenv] is usually redundant if you have python-dotenv or pydantic-settings,
    # but kept here to match your original request.
    # "pydantic[dotenv]>=2.13.0",
]

[tool.hatch.build.targets.wheel]
packages = ["museflow"]

[tool.ruff]
src = ["museflow", "tests"]
target-version = "py313"
line-length = 119
fix = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes (by default)
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "PERF", # Perflint
    "FURB", # refurb
]
ignore = [
    "B008",  # Allow function calls in argument defaults (required for FastAPI Depends)
    "E501",  # Line too long will be formatted by Ruff format
]

[tool.ruff.lint.isort]
force-single-line = true
known-first-party = ["museflow"]
known-local-folder = ["tests"]
section-order = [
    "future",
    "standard-library",
    "fastapi",
    "pydantic",
    "sqlalchemy",
    "third-party",
    "first-party",
    "local-folder",
]
sections.fastapi = [
    "fastapi",
    "starlette",
    "httpx",
    "uvicorn",
]
sections.pydantic = [
    "pydantic",
    "pydantic_settings",
]
sections.sqlalchemy = [
    "sqlalchemy",
    "alembic",
    "asyncpg",
]

[tool.mypy]
python_version = "3.13"
files = ["museflow", "tests"]
plugins = "pydantic.mypy"

[[tool.mypy.overrides]]
module = "wiremock.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "ijson.*"
ignore_missing_imports = true

[tool.deptry.per_rule_ignores]
DEP002 = [
    # Used as a driver for SQLAlchemy.
    "asyncpg",
]


[tool.pytest.ini_options]
junit_family = "legacy"
addopts = [
    "--dist=loadgroup",
    "--cov=museflow",
    "--cov-report=xml",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-branch",
    "--junitxml=junit.xml",
]
testpaths = ["tests"]
pythonpath = ["."]
env = [
    # App required settings
    'MUSEFLOW_SECRET_KEY=Vp8W9UnJLtCrOPnLiUrPeAs2y10PwYPv',
    # App backend cors
    'MUSEFLOW_BACKEND_CORS_ALLOW_ORIGINS=["*"]',
    'MUSEFLOW_BACKEND_CORS_ALLOW_CREDENTIALS=False',
    # App settings optional but just in case (fixture override)
    'MUSEFLOW_LOG_LEVEL_API=DEBUG',
    'MUSEFLOW_LOG_LEVEL_CLI=DEBUG',
    'MUSEFLOW_LOG_HANDLERS_API=["null"]',
    'MUSEFLOW_LOG_HANDLERS_CLI=["null"]',
    # Database required settings (could be overriden)
    'D:DATABASE_HOST=127.0.0.1',
    'D:DATABASE_PORT=5432',
    'D:DATABASE_USER=museflow',
    'D:DATABASE_PASSWORD=museflow',
    'D:DATABASE_PATH=museflow',
    # Spotify client required settings (could be overriden for live tests)
    'D:SPOTIFY_CLIENT_ID=dummy-client-id',
    'D:SPOTIFY_CLIENT_SECRET=dummy-client-secret',
    'SPOTIFY_CLIENT_REDIRECT_URI=http://127.0.0.1:8000/api/v1/spotify/callback',
    # Wiremock spotify settings
    'WIREMOCK_SPOTIFY_ADMIN_URL=http://localhost:8081',
    'WIREMOCK_SPOTIFY_BASE_URL=https://localhost:8444',
    # LastFM client required settings (could be overriden for live tests)
    'D:LASTFM_CLIENT_API_KEY=dummy-client-id',
    'D:LASTFM_CLIENT_SECRET=dummy-client-secret',
    # Wiremock lastfm settings
    'WIREMOCK_LASTFM_ADMIN_URL=http://localhost:8082',
    'WIREMOCK_LASTFM_BASE_URL=http://localhost:8082',
    # Gemini client required settings (could be overriden for live tests)
    'D:GEMINI_API_KEY=dummy-api-key',
    # Wiremock gemini settings
    'WIREMOCK_GEMINI_ADMIN_URL=http://localhost:8083',
    'WIREMOCK_GEMINI_BASE_URL=https://localhost:8445',
]
filterwarnings = [
    "always",  # Equivalent to -W always
]

[tool.coverage.run]
source = [
    "museflow",
    "tests",
]
branch = true
concurrency = ["thread", "greenlet"]
omit = [
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise AssertionError",
    "raise NotImplementedError",
    "def __str__",
    "def __repr__",
    "@abstractmethod",
    "if __name__ == .__main__.:",
]
fail_under = 100
skip_covered = true
show_missing = true

[tool.coverage.html]
directory = "htmlcov"
